# FakeSignal

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  VN.md
examples/: crash_all.cpp  crash_demo.cpp  signal_selector.cpp
include/: fakesignal.h
src/: fakesignal.cpp  fakesignal.h
tests/: test_runner.cpp
